kubernetes/book-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: yourdockerhubusername/book-service:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  type: ClusterIP
  ports:
    - port: 5002
  selector:
    app: book-service
